fix: mitigate excessive spacing due to line-height
Even if contained i c-group.

--- a/source/sass/object/_article.scss
+++ b/source/sass/object/_article.scss
@@ -15,7 +15,8 @@ $article-content-elements:
         margin-top: 0;
     }
 
-    h1:first-child {
+    h1:first-child,
+    .c-group:first-child h1:first-child {
         margin-top: -0.21rem; /* Mitigates excessive spacing due to line-height */ 
     }
     
